clientservice/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: auth-app
    template:
       metadata:
          labels:
             app: auth-app
       spec:
          containers:
          - name: auth-app
            image: otusarchitectpopov/hw01:authapp
            imagePullPolicy: Always
            ports:
              - containerPort: 8080
