clientservice/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: client-app
    template:
       metadata:
          labels:
             app: client-app
       spec:
          containers:
          - name: client-app
            image: otusarchitectpopov/hw01:clientservice
            imagePullPolicy: Always
            ports:
              - containerPort: 8000
