clientservice/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-app
  ports:
    - protocol: TCP
      port: 8080
  type: NodePort
