clientservice/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client-app
  ports:
    - protocol: TCP
      port: 8000
  type: NodePort
