clientservice/common-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: common-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /profile
        backend:
          serviceName: client-service
          servicePort: 8000
      - path: /user($|/)(.*)
        backend:
          serviceName: client-service
          servicePort: 8000
      - path: /auth
        backend:
          serviceName: auth-service
          servicePort: 8080
      - path: /register
        backend:
          serviceName: auth-service
          servicePort: 8080
